--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
   "name": "webpack-not-spa",
-  "version": "1.0.0",
-  "description": "Webpack 3 setup useful to build a simple website and not a super sophisticated spa",
-  "main": "index.js",
+  "version": "2.0.0",
+  "description": "Webpack 4 setup useful to build a simple website and not a super sophisticated spa",
+  "main": "./src/index.js",
   "scripts": {
-    "start": "webpack --progress",
-    "build": "webpack -p --progress",
-    "watch": "webpack --watch --progress"
+    "start": "webpack --progress --mode development --config webpack.base.js",
+    "watch": "webpack --progress --mode development --watch --config webpack.development.js",
+    "build": "webpack --progress --mode production --config webpack.production.js"
   },
+  "keywords": [
+    "webpack",
+    "babel",
+    "es6",
+    "eslint",
+    "stylelint",
+    "sass",
+    "postcss"
+  ],
   "author": "bitfella",
   "license": "UNLICENSED",
   "repository": {
@@ -15,28 +24,39 @@
     "url": "https://github.com/bitfella/webpack-not-spa.git"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "breakpoint-sass": "^2.7.1",
-    "css-loader": "^0.28.5",
-    "eslint": "^4.6.1",
-    "eslint-config-airbnb-base": "^12.0.0",
-    "eslint-import-resolver-webpack": "^0.8.3",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "^2.7.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "node-sass": "^4.5.3",
-    "postcss-cssnext": "^3.0.2",
-    "postcss-import": "^10.0.0",
-    "postcss-loader": "^2.0.6",
-    "sass-loader": "^6.0.6",
-    "sass-resources-loader": "^1.3.1",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.5.5",
-    "webpack-livereload-plugin": "^0.11.0",
-    "webpack-notifier": "^1.5.0"
+    "@babel/core": "^7.1.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.6.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-import": "^2.14.0",
+    "file-loader": "^2.0.0",
+    "mini-css-extract-plugin": "^0.4.3",
+    "node-sass": "^4.9.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "path": "^0.12.7",
+    "postcss": "^7.0.5",
+    "postcss-import": "^12.0.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.1.0",
+    "sass-loader": "^7.1.0",
+    "sass-resources-loader": "^1.3.3",
+    "style-loader": "^0.23.1",
+    "stylelint": "^9.6.0",
+    "stylelint-config-sass-guidelines": "^5.2.0",
+    "stylelint-webpack-plugin": "^0.10.5",
+    "url-loader": "^1.1.1",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-livereload-plugin": "^2.1.1",
+    "webpack-notifier": "^1.6.0"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.0.0"
   }
 }
